import com.github.spotbugs.SpotBugsTask

/*
 * Copyright (C) 2018. OpenLattice, Inc.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *
 * You can contact the owner of the copyright at support@openlattice.com
 *
 *
 */

plugins {
    id 'eclipse'
    id 'idea'
    id 'jacoco'
    id 'checkstyle'
    id "maven-publish"
    id "signing"
    id 'com.github.spotbugs' version '3.0.0'
    id 'org.jetbrains.kotlin.jvm' version '1.3.61'
    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.61'
    id 'org.jetbrains.dokka' version '0.9.18'
    id 'java'
    id 'com.github.jk1.dependency-license-report' version '1.11'
    id 'org.owasp.dependencycheck' version '5.2.1'
}

description = "Conductor Client"
group = "com.openlattice"

ext.projectName = "conductor-client"
ext.scmUrl = 'scm:git:https://github.com/openlattice/conductor-client.git'
ext.connectionUrl = 'scm:git:https://github.com/openlattice/conductor-client.git'
ext.developerConnectionUrl = 'scm:git:https://github.com/openlattice/conductor-client.git'

apply from: "https://raw.githubusercontent.com/openlattice/gradles/master/openlattice.gradle"

sourceCompatibility=JavaVersion.VERSION_11
targetCompatibility=JavaVersion.VERSION_11

import com.github.jk1.license.render.*
licenseReport {
    renderers = [new InventoryHtmlReportRenderer()]
}

def versions = [
  checkstyle: '7.4',
]

checkstyle {
  toolVersion = "${versions.checkstyle}"
}

tasks.withType(Checkstyle) {
    reports {
        xml.enabled = false
        html.enabled = true
    }
}

spotbugs {
    reportLevel = 'high'
    toolVersion = "${spotbugs_annotations_version}"
}

tasks.withType(SpotBugsTask) {
    reports {
        xml.enabled = false
        html.enabled = true
    }
    ignoreFailures = true
}

tasks.withType(Javadoc) {
    enabled = false
}

dokka {
    outputFormat = 'html'
    outputDirectory = "$buildDir/javadoc"
}

jacoco {
    toolVersion = "0.8.2"
}


tasks.withType(Test) {
    jvmArgs += [ "--add-modules", "java.se",
                 "--add-exports","java.base/jdk.internal.ref=ALL-UNNAMED",
                 "--add-opens","java.base/java.lang=ALL-UNNAMED",
                 "--add-opens","java.base/java.nio=ALL-UNNAMED",
                 "--add-opens","java.base/sun.nio.ch=ALL-UNNAMED",
                 "--add-opens","java.management/sun.management=ALL-UNNAMED",
                 "--add-opens","jdk.management/com.sun.management.internal=ALL-UNNAMED"]
}


tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
    kotlinOptions {
        jvmTarget = "1.8"
        freeCompilerArgs += '-Xjvm-default=compatibility'
    }
}

dependencies {
    spotbugsPlugins "com.h3xstream.findsecbugs:findsecbugs-plugin:${findsecbugs_version}"
    compileOnly "net.jcip:jcip-annotations:${jcip_version}"
    compileOnly "com.github.spotbugs:spotbugs-annotations:${spotbugs_annotations_version}"
    testCompileOnly "net.jcip:jcip-annotations:${jcip_version}"
    testCompileOnly "com.github.spotbugs:spotbugs-annotations:${spotbugs_annotations_version}"
    /*
     * SL4J
     */
    compile group: "org.slf4j", name: "slf4j-api", version:"${slf4j_version}"
  
    /*
     * @Inject and @Nullable support
     */
    compile "javax.inject:javax.inject:${javax_inject_version}"

    compile "com.fasterxml.jackson.dataformat:jackson-dataformat-csv:${jackson_version}"
    compile "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:${jackson_version}"
    compile "com.esotericsoftware:kryo-shaded:${kryo_shaded_version}"
    compile "com.esotericsoftware:minlog:${minlog_version}"
    compile "com.esotericsoftware:reflectasm:${reflectasm_version}"
    compile "org.objenesis:objenesis:${objenesis_version}"

    
    compile "com.google.guava:guava:${guava_version}"
    compile "org.apache.olingo:odata-commons-api:${odata_version}"
    compile "org.apache.olingo:odata-commons-core:${odata_version}"
    compile "org.apache.olingo:odata-server-api:${odata_version}"
    compile "org.apache.olingo:odata-server-core:${odata_version}"
    //compile "org.apache.tika:tika-core:1.19.1"

    compile "org.xerial.snappy:snappy-java:${snappy_version}"
    compile "net.jpountz.lz4:lz4:${lz4_version}"
    compile "de.javakaffee:kryo-serializers:${kryo_serializers_version}"
    compile "com.google.code.findbugs:findbugs:${findbugs_version}"

    if( project.hasProperty('developmentMode') && project.developmentMode ) {
        logger.quiet(project.name + " using project dependencies.")
        compile project(":api")
        compile project(":rhizome")
        compile project(":scribe")
        testCompile( project(path: ":api", configuration: "tests"))
        testCompile( project(path: ":rhizome", configuration: "tests"))
        testCompile( project(path: ":rhizome-client", configuration: "tests"))
        testCompile( project(path: ":scribe", configuration: "tests"))
    } else {
        logger.quiet(project.name + " using jar dependencies.")
        compile "com.openlattice:api:${api_version}"
        compile "com.openlattice:rhizome:${rhizome_version}"
        compile "com.openlattice:scribe:${scribe_version}"

        testCompile "com.openlattice:api:${api_version}:tests"
        testCompile "com.openlattice:rhizome:${rhizome_version}:tests"
        testCompile "com.openlattice:rhizome-client:${rhizome_client_version}:tests"
        testCompile "com.openlattice:scribe:${scribe_version}:tests"
    }
    testImplementation "junit:junit:${junit_version}"
    /*
     * TESTING
     */
    testCompile "junit:junit:${junit_version}"
    testCompile( "org.mockito:mockito-all:${mockito_version}" ) {
        exclude module : 'hamcrest'
        exclude module : 'hamcrest-core'
    }
    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
}

test {
    maxHeapSize = "8g"
}

install {
	configuration = configurations.published
}

eclipse {
    ext.downloadSources = true
    ext.downloadJavadoc = true
    ext.sourceCompatibility=JavaVersion.VERSION_11
}
